Update Dockerfile for Java

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,10 +9,17 @@ RUN yum update -y && \
         gcc gcc-c++ make \
         zlib-devel curl less vim bzip2 \
         git wget unzip \
-        java-1.8.0-openjdk-devel \
+        #java-1.8.0-openjdk-devel \
         maven ant \
         python3 python3-pip && \
     yum clean all
+
+RUN yum install -y java-11-openjdk java-11-openjdk-devel && \
+    yum clean all
+
+# Make sure the java command uses OpenJDK 11
+RUN alternatives --install /usr/bin/java java /usr/lib/jvm/java-11-openjdk-*/bin/java 200 && \
+    alternatives --set java /usr/lib/jvm/java-11-openjdk-*/bin/java
 
 # Clone your fixed fork of VarSim
 RUN cd /opt && \
